--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,6 +116,12 @@ const people = [
           slot="col2"
         />
       </ColumnsSection>
+
+      <div class="flex cols center gap-2 pt-0 pad-8">
+        <LabLinkButton href="/kurse/kurs1">zu Kurs 1</LabLinkButton>
+        <LabLinkButton href="/kurse/kurs2">zu Kurs 2</LabLinkButton>
+        <LabLinkButton href="/praxisphase">Praxisphase</LabLinkButton>
+      </div>
     </div>
   </main>
 </Layout>
