--- a/src/pages/kurse/kurs1.astro
+++ b/src/pages/kurse/kurs1.astro
@@ -60,107 +60,106 @@ const people = [
   </p>
   <Fragment slot="cta">
     <LabLinkButton href="#start">Kursüberblick</LabLinkButton>
-    <LinkButton href="/">Zurück zur Übersicht</LinkButton>
+    <LabLinkButton href="/kurse/kurs2">zu Kurs 2</LabLinkButton>
   </Fragment>
 
-  <Fragment>
-    <section class="prose">
+  <ColumnsSection center_title>
+    <Fragment slot="pre">
       <Blockquote bare wide>
         In unserem Kurs „Daten verstehen: Grundlagenwissen entdecken“ lernt ihr, Daten richtig
         einzuschätzen, Wirkung messbar zu machen und datenbasierte Projekte sicher anzugehen – auch
-        ohne Vorwissen.
+        ohne Vorwissen.<br /><br /> Wir verbinden Grundlagenwissen mit konkreten Anwendungen und schaffen
+        Raum für Austausch, Fragen und individuelle Begleitung – von und für die Zivilgesellschaft!
       </Blockquote>
+    </Fragment>
+    <div class="flex rows gap-2" slot="col1">
+      <h4>Der Kurs ist für dich richtig, wenn…</h4>
+      <ul>
+        <li>… du in die Welt der Daten einsteigen willst – ohne Vorkenntnisse.</li>
+        <li>
+          … du lernen möchtest, Themen wie Datenschutz, künstliche Intelligenz oder maschinelles
+          Lernen abwägend und kritisch zu beurteilen.
+        </li>
+        <li>
+          … du einen Überblick bekommen willst, wofür du Daten nutzen kannst: von Visualisierungen
+          und Data Storytelling über Wirkungsmessung bis hin zu automatisiertem Reporting.
+        </li>
+        <li>… du mehr aus den Daten machen möchtest, die in deiner Organisation vorliegen.</li>
+      </ul>
+    </div>
 
-      <p>
-        Wir verbinden Grundlagenwissen mit konkreten Anwendungen und schaffen Raum für Austausch,
-        Fragen und individuelle Begleitung – von und für die Zivilgesellschaft!
-      </p>
-    </section>
+    <div class="flex rows gap-2" slot="col2">
+      <h4>Im Kurs lernst du…</h4>
+      <ul>
+        <li>
+          … relevante Daten zu identifizieren und erfährst, wofür du diese Daten nutzen kannst.
+        </li>
+        <li>
+          … Daten zu strukturieren und ihre Nutzung ethisch und datenschutzrechtlich zu beurteilen.
+        </li>
+        <li>
+          … Grundkenntnisse in Statistik, Künstlicher Intelligenz und Visualisierung selbstbewusst
+          anzuwenden.
+        </li>
+        <li>… welche Anwendungsfälle Daten in der Wirkungsmessung und im Reporting haben.</li>
+        <li>… wie du dein erstes Datenprojekt in der Praxis initiieren und planen kannst.</li>
+      </ul>
+    </div>
+  </ColumnsSection>
 
-    <ColumnsSection center_title>
-      <Fragment slot="col1">
-        <h4>Der Kurs ist für dich richtig, wenn…</h4>
+  <BackgroundSection
+    options={{ content_grid: true, full_height: true, center: true }}
+    asset={{ src: CarouselBackground.src, position: 'bottom right' }}
+  >
+    <Carousel slides={quotes.landing.filter((quote) => quote.k === 1)} id="carousel">
+      {
+        quotes.landing
+          .filter((quote) => quote.k === 1)
+          .map((quote, index) => (
+            <div class="carousel-content" data-step-id={index + 1}>
+              <Blockquote id={index + 1}>
+                <Fragment>{quote.quote}</Fragment>
+                <Fragment slot="cite">
+                  {' '}
+                  <span class="name txt-italic">{quote.cite.name}</span>
+                  <span class="role">{quote.cite.role}</span>
+                </Fragment>
+              </Blockquote>
+            </div>
+          ))
+      }
+    </Carousel>
+  </BackgroundSection>
+
+  <section class="prose">
+    <CardPlain>
+      <h4 slot="card-title">Wie läuft der Kurs ab?</h4>
+      <ul slot="content">
+        <li>Zeitraum: 12 Wochen vom 12. September bis 12. Dezember 2025</li>
+        <li>Zeitaufwand: 2 bis 4 Stunden / Woche</li>
+        <li>Format: Integriertes Lernformat mit</li>
         <ul>
-          <li>… du in die Welt der Daten einsteigen willst – ohne Vorkenntnisse.</li>
+          <li>interaktiver Lernplattform,</li>
           <li>
-            … du lernen möchtest, Themen wie Datenschutz, künstliche Intelligenz oder maschinelles
-            Lernen abwägend und kritisch zu beurteilen.
+            wöchentlicher Online-Livesession mit datenwissenschaftlichen Tutor*innen, immer freitags
+            zu den oben genannten Terminen von 12 bis 13 Uhr,
           </li>
+          <li>gemeinsamem Lernen in kleinen Gruppen,</li>
           <li>
-            … du einen Überblick bekommen willst, wofür du Daten nutzen kannst: von Visualisierungen
-            und Data Storytelling über Wirkungsmessung bis hin zu automatisiertem Reporting.
+            individueller Beratung in Datensprechstunden zu den Herausforderungen eurer eigenen
+            Organisation.
           </li>
-          <li>… du mehr aus den Daten machen möchtest, die in deiner Organisation vorliegen.</li>
         </ul>
-      </Fragment>
+      </ul>
+    </CardPlain>
+  </section>
 
-      <Fragment slot="col2">
-        <h4>Im Kurs lernst du…</h4>
-        <ul>
-          <li>
-            … relevante Daten zu identifizieren und erfährst, wofür du diese Daten nutzen kannst.
-          </li>
-          <li>
-            … Daten zu strukturieren und ihre Nutzung ethisch und datenschutzrechtlich zu
-            beurteilen.
-          </li>
-          <li>
-            … Grundkenntnisse in Statistik, Künstlicher Intelligenz und Visualisierung selbstbewusst
-            anzuwenden.
-          </li>
-          <li>… welche Anwendungsfälle Daten in der Wirkungsmessung und im Reporting haben.</li>
-          <li>… wie du dein erstes Datenprojekt in der Praxis initiieren und planen kannst.</li>
-        </ul>
-      </Fragment>
-    </ColumnsSection>
-
-    <BackgroundSection
-      options={{ content_grid: true, full_height: true, center: true }}
-      asset={{ src: CarouselBackground.src, position: 'bottom right' }}
-    >
-      <Carousel slides={quotes.landing.filter((quote) => quote.k === 1)} id="carousel">
-        {
-          quotes.landing
-            .filter((quote) => quote.k === 1)
-            .map((quote, index) => (
-              <div class="carousel-content" data-step-id={index + 1}>
-                <Blockquote id={index + 1}>
-                  <Fragment>{quote.quote}</Fragment>
-                  <Fragment slot="cite">
-                    {' '}
-                    <span class="name txt-italic">{quote.cite.name}</span>
-                    <span class="role">{quote.cite.role}</span>
-                  </Fragment>
-                </Blockquote>
-              </div>
-            ))
-        }
-      </Carousel>
-    </BackgroundSection>
-    <section class="prose">
-      <CardPlain>
-        <h4 slot="card-title">Wie läuft der Kurs ab?</h4>
-        <ul slot="content">
-          <li>Zeitraum: 12 Wochen vom 12. September bis 12. Dezember 2025</li>
-          <li>Zeitaufwand: 2 bis 4 Stunden / Woche</li>
-          <li>Format: Integriertes Lernformat mit</li>
-          <ul>
-            <li>interaktiver Lernplattform,</li>
-            <li>
-              wöchentlicher Online-Livesession mit datenwissenschaftlichen Tutor\*innen, immer
-              freitags zu den oben genannten Terminen von 12 bis 13 Uhr,
-            </li>
-            <li>gemeinsamem Lernen in kleinen Gruppen,</li>
-            <li>
-              individueller Beratung in Datensprechstunden zu den Herausforderungen eurer eigenen
-              Organisation.
-            </li>
-          </ul>
-        </ul>
-      </CardPlain>
-    </section>
-
-    <section class="prose">
+  <section class="pt-0">
+    <figure>
+      <Image src={FlyerKurs} alt="Flyer Kurs 1" />
+      <figcaption class="contained">TODO: Flyer</figcaption>
+    </figure>
+    <div class="subsection prose pad-6">
       <CardPlain>
         <h4 slot="card-title">Die Themen</h4>
         <table slot="content">
@@ -176,17 +175,11 @@ const people = [
           </tbody>
         </table>
       </CardPlain>
-    </section>
-    <section>
-      <figure>
-        <Image src={FlyerKurs} alt="Flyer Kurs 1" />
-        <figcaption>TODO: Flyer</figcaption>
-      </figure>
-      <div class="subsection content-box narrow flex rows align-center">
-        <Fragment set:html={await KostenContent.compiledContent()} />
-      </div>
-    </section>
-  </Fragment>
+    </div>
+    <div class="subsection content-box narrow flex rows align-center">
+      <Fragment set:html={await KostenContent.compiledContent()} />
+    </div>
+  </section>
 
   <section class="sticky sticky-bottom">
     <LabLinkButton href="https://pretix.eu/control/event/correlaid/correllab-1-dl/">
@@ -212,16 +205,21 @@ const people = [
     >
   </Banner>
 
-  <style>
-    .sticky-bottom {
-      position: sticky;
-      bottom: 0;
-      width: 100%;
-      background-color: var(--color-background);
-      padding: 1rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  </style>
+  <div class="flex cols center gap-2 pad-8" slot="footer-links">
+    <LabLinkButton href="/kurse/kurs2">zu Kurs 2</LabLinkButton>
+    <LabLinkButton href="/praxisphase">Praxisphase</LabLinkButton>
+  </div>
 </KursLayout>
+
+<style>
+  .sticky-bottom {
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--color-background);
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+</style>
