--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -37,7 +37,7 @@ const people = [
   <p slot="teaser">
     Eure Organisation braucht Unterstützung beim Aufsetzen einer Datenbank, der Analyse von
     Statistiken, der Erstellung eines Wirkungsberichts oder beim Einsatz von künstlicher
-    Intelligenz? Dann seid ihr hier genau richtig!
+    Intelligenz?<br /><br />Dann seid ihr hier genau richtig!
   </p>
   <Fragment slot="cta">
     <LabLinkButton href="#start">Die Praxis</LabLinkButton>
@@ -48,17 +48,12 @@ const people = [
       <Blockquote bare wide>
         In der Praxisphase setzt ihr eure Projektidee in die Tat um – mit tatkräftiger Unterstützung
         unserer ehrenamtlichen Data Scientists. Gemeinsam bringt ihr eure Organisation mit
-        datenbasierten Lösungen voran!
+        datenbasierten Lösungen voran!<br /><br />
+        Wir verbinden Grundlagenwissen mit konkreten Anwendungen und schaffen Raum für Austausch, Fragen
+        und individuelle Begleitung – von und für die Zivilgesellschaft!
       </Blockquote>
-
-      <p>
-        Wir verbinden Grundlagenwissen mit konkreten Anwendungen und schaffen Raum für Austausch,
-        Fragen und individuelle Begleitung – von und für die Zivilgesellschaft!
-      </p>
     </section>
-    <section class="prose">
-      <div set:html={await content.compiledContent()} />
-    </section>
+    <section class="prose" set:html={await content.compiledContent()} />
     <PeopleSection people={people} />
   </Fragment>
 </KursLayout>
