--- a/src/pages/kurse/kurs2.astro
+++ b/src/pages/kurse/kurs2.astro
@@ -55,7 +55,7 @@ import * as KursColumns2 from '@content/kurse/kurs_2_columns_2.md';
 import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
 ---
 
-<KursLayout>
+<KursLayout title="CorrelLAB: Kurs 2 - Daten nutzen">
   <h4 slot="subtitle">
     Kurs 2: Daten nutzen<br />&ndash;&nbsp;Tools und Methoden praktisch anwenden
   </h4>
@@ -177,15 +177,4 @@ import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
   </div>
 </KursLayout>
 
-<style>
-  .sticky-bottom {
-    position: sticky;
-    bottom: 0;
-    width: 100%;
-    background-color: var(--color-background);
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-</style>
+<style></style>
