--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -130,6 +130,10 @@ section {
     padding-top: 0;
   }
 
+  &.trim {
+    padding-bottom: 0;
+  }
+
   /* &:last-of-type {
     padding-bottom: 0;
   } */
