--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ export interface Props {
   title?: string;
 }
 
-const { title = 'Style Guide' } = Astro.props;
+const { title = 'CorrelLAB' } = Astro.props;
 ---
 
 <!doctype html>
