--- a/src/pages/kurse/kurs1.astro
+++ b/src/pages/kurse/kurs1.astro
@@ -55,7 +55,7 @@ import * as KursColumns2 from '@content/kurse/kurs_1_columns_2.md';
 import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
 ---
 
-<KursLayout>
+<KursLayout title="CorrelLAB: Kurs 1 - Daten verstehen">
   <h4 slot="subtitle">Kurs 1: Daten verstehen &ndash;Grundlagenwissen entdecken</h4>
   <p slot="teaser">
     Viele Organisationen sammeln täglich Daten – doch nur wenige nutzen sie gezielt. Wie lassen sich
@@ -175,15 +175,4 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   </div>
 </KursLayout>
 
-<style>
-  .sticky-bottom {
-    position: sticky;
-    bottom: 0;
-    width: 100%;
-    background-color: var(--color-background);
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-</style>
+<style></style>
