--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -4,6 +4,8 @@ import Blockquote from '@components/Blockquote.astro';
 import LabLinkButton from '@components/LabLinkButton.astro';
 import LinkButton from '@components/LinkButton.astro';
 import PeopleSection from '@compositions/People.astro';
+import Banner from '@compositions/Banner.astro';
+import MailIcon from '@assets/svg/icons/mail.svg';
 
 import * as content from '@content/praxisphase.md';
 import ImageZoe from '@assets/images/wolter-zoe.jpg';
@@ -32,7 +34,7 @@ const people = [
 ];
 ---
 
-<KursLayout>
+<KursLayout title="CorrelLAB: Praxisphase">
   <h4 slot="subtitle">Praxisphase</h4>
   <p slot="teaser">
     Eure Organisation braucht Unterstützung beim Aufsetzen einer Datenbank, der Analyse von
@@ -43,17 +45,39 @@ const people = [
     <LabLinkButton href="#start">Die Praxis</LabLinkButton>
     <LinkButton href="/">Zurück zur Übersicht</LinkButton>
   </Fragment>
-  <Fragment>
-    <section class="prose">
-      <Blockquote bare wide>
-        In der Praxisphase setzt ihr eure Projektidee in die Tat um – mit tatkräftiger Unterstützung
-        unserer ehrenamtlichen Data Scientists. Gemeinsam bringt ihr eure Organisation mit
-        datenbasierten Lösungen voran!<br /><br />
-        Wir verbinden Grundlagenwissen mit konkreten Anwendungen und schaffen Raum für Austausch, Fragen
-        und individuelle Begleitung – von und für die Zivilgesellschaft!
-      </Blockquote>
-    </section>
-    <section class="prose" set:html={await content.compiledContent()} />
-    <PeopleSection people={people} />
-  </Fragment>
+  <section class="prose trim">
+    <Blockquote bare wide>
+      In der Praxisphase setzt ihr eure Projektidee in die Tat um – mit tatkräftiger Unterstützung
+      unserer ehrenamtlichen Data Scientists. Gemeinsam bringt ihr eure Organisation mit
+      datenbasierten Lösungen voran!<br /><br />
+      Wir verbinden Grundlagenwissen mit konkreten Anwendungen und schaffen Raum für Austausch, Fragen
+      und individuelle Begleitung – von und für die Zivilgesellschaft!
+    </Blockquote>
+  </section>
+  <section class="prose cap" set:html={await content.compiledContent()} />
+  <section class="sticky sticky-bottom">
+    <LabLinkButton href="https://pretix.eu/control/event/correlaid/correllab-1-dl/">
+      Hier geht es zur Anmeldung!
+    </LabLinkButton>
+  </section>
+  <PeopleSection people={people} />
+  <Banner slot="banner">
+    <Fragment slot="title">Interessiert?</Fragment>
+    <Fragment slot="body">
+      <p class="light">
+        Wir sind immer auf der Suche nach ehrenamtlichen Tutor*innen für unseren nächsten Kurs!
+      </p>
+      <p class="light">Melde dich dazu einfach kurz bei unserem Bildungsteam.</p>
+    </Fragment>
+    <LinkButton
+      variant="btn-light"
+      href="mailto:education@correlaid.org"
+      classes="btn-icon"
+      slot="cta"><MailIcon height={'20'} /> Nachricht schreiben</LinkButton
+    >
+  </Banner>
+  <div class="flex cols center gap-2 pad-8" slot="footer-links">
+    <LabLinkButton href="/kurse/kurs1">Kurs 1: Daten verstehen</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs2">Kurs 2: Daten nutzen</LabLinkButton>
+  </div>
 </KursLayout>
