--- a/src/components/cards/CardPlain.astro
+++ b/src/components/cards/CardPlain.astro
@@ -21,6 +21,8 @@
     flex-direction: column;
     gap: 1rem;
     background: var(--color-lab-pink-light);
+    /* background: linear-gradient(0, var(--color-lab-pink-light) 0%, #c3cfe2 100%); */
+    box-shadow: 0 2px 10px rgba(102, 126, 234, 0.3);
     padding: 1.5rem;
     border-radius: 1rem;
     height: 100%;
