--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,6 +20,7 @@ html {
   @media screen and (max-width: 650px) {
     --padding: 1rem;
     --root-font-size: 16px;
+    --header-height: 76px;
   }
 }
 
