--- a/src/compositions/CoursesCards.astro
+++ b/src/compositions/CoursesCards.astro
@@ -125,9 +125,7 @@ const bullets = {
     </Fragment>
     <Fragment slot="footer">
       <div>
-        <LinkButton href="https://correlaid.org/daten-nutzen/projekte/" classes="btn-secondary"
-          >Mehr zur Praxisphase</LinkButton
-        >
+        <LinkButton href="/praxisphase" classes="btn-secondary">Mehr zur Praxisphase</LinkButton>
       </div>
     </Fragment>
   </CardPlain>
