--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -8,28 +8,14 @@ import Banner from '@compositions/Banner.astro';
 import MailIcon from '@assets/svg/icons/mail.svg';
 
 import * as content from '@content/praxisphase.md';
-import ImageZoe from '@assets/images/wolter-zoe.jpg';
-import ImageAntje from '@assets/images/relitz-antje.png';
-import ImageEmma from '@assets/images/morlock-emma.png';
+import ImageAnnKristin from '@assets/images/ann_kristin_vester.webp';
 
 const people = [
   {
-    name: 'Zoé Wolter',
-    role: 'Geschäftsführung und Bildung',
-    image: ImageZoe.src,
+    name: 'Ann-Kristin Vester',
+    role: 'Geschäftsführung',
+    image: ImageAnnKristin.src,
     email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Zo%C3%A9%2C',
-  },
-  {
-    name: 'Antje Relitz',
-    role: 'Bildung',
-    image: ImageAntje.src,
-    email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Antje%2C',
-  },
-  {
-    name: 'Emma Morlock',
-    role: 'Werkstudentin Data Literacy',
-    image: ImageEmma.src,
-    email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Emma%2C',
   },
 ];
 
