refactor kurse, banner, flyer

--- a/src/compositions/Banner.astro
+++ b/src/compositions/Banner.astro
@@ -9,11 +9,11 @@ import MailIcon from '@assets/svg/icons/mail.svg';
     <CorrelLabKompaktDynamic height={'80'} color="var(--color-lab-muted)" />
   </div>
   <div class="prose content-box narrow">
-    <h2 class="light"><slot name="title">Interessiert?</slot></h2>
+    <h2 class="light"><slot name="title">Fragen zum Stipendium?</slot></h2>
     <div class="body">
       <slot name="body">
         <p class="light">
-          hr habt Fragen, z. B. zum Stipendienticket oder wollt direkt im CorrelLAB durchstarten?
+          Ihr habt Fragen, z. B. zum Stipendienticket oder wollt direkt im CorrelLAB durchstarten?
           Schreibt uns einfach eine kurze Nachricht, wir freuen uns auf euch!
         </p>
       </slot>
