--- a/src/compositions/Header.astro
+++ b/src/compositions/Header.astro
@@ -5,6 +5,7 @@ import CorrelLabLogoWide from '@assets/branding/lab/Main/CorrelLab horizontal.sv
 import NavigationMain from '@/components/NavigationMain.astro';
 import NavigationCompact from '@/components/NavigationCompact.astro';
 import LinkButton from '@/components/LinkButton.astro';
+import AidLinkButton from '@/components/AidLinkButton.astro';
 ---
 
 <header>
@@ -18,7 +19,8 @@ import LinkButton from '@/components/LinkButton.astro';
   <!-- <NavigationMain /> -->
   <!-- <NavigationCompact /> -->
   <div class="corner">
-    <LinkButton href="#">Unterstützen</LinkButton>
+    <!-- <LinkButton href="#">Unterstützen</LinkButton> -->
+    <AidLinkButton href="https://correlaid.org">Zu CorrelAid</AidLinkButton>
   </div>
 </header>
 
