--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,7 @@ const { title = 'CorrelLAB' } = Astro.props;
     <link rel="stylesheet" href="/src/styles/tokens.css" />
     <title>{title}</title>
     <ClientRouter />
+    <script defer data-domain="lab.correlaid.org" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
     <Header />
