--- a/src/pages/praxisphase.astro
+++ b/src/pages/praxisphase.astro
@@ -31,7 +31,7 @@ import ScrollColumns from '@compositions/ScrollColumns.astro';
     Intelligenz?<br /><br />Dann seid ihr hier genau richtig!
   </p>
   <Fragment slot="cta">
-    <LabLinkButton href="#start">Die Praxis</LabLinkButton>
+    <LabLinkButton href="#start">Die Praxisphase</LabLinkButton>
     <LinkButton href="/">Zurück zur Übersicht</LinkButton>
   </Fragment>
   <section class="content-box trim">
@@ -75,7 +75,7 @@ import ScrollColumns from '@compositions/ScrollColumns.astro';
     >
   </Banner>
   <div class="flex cols center gap-2 pad-8" slot="footer-links">
-    <LabLinkButton href="/kurse/kurs1">Kurs 1: Daten verstehen</LabLinkButton>
-    <LabLinkButton href="/kurse/kurs2">Kurs 2: Daten nutzen</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs1">Kurs: Daten verstehen</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs2">Kurs: Daten nutzen</LabLinkButton>
   </div>
 </KursLayout>
