--- a/src/pages/kurse/kurs1.astro
+++ b/src/pages/kurse/kurs1.astro
@@ -55,8 +55,8 @@ import * as KursColumns2 from '@content/kurse/kurs_1_columns_2.md';
 import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
 ---
 
-<KursLayout title="CorrelLAB: Kurs 1 - Daten verstehen">
-  <h4 slot="subtitle">Kurs 1: Daten verstehen &ndash;Grundlagenwissen entdecken</h4>
+<KursLayout title="CorrelLAB: Kurs - Daten verstehen">
+  <h4 slot="subtitle">Kurs: Daten verstehen &ndash;Grundlagenwissen entdecken</h4>
   <p slot="teaser">
     Viele Organisationen sammeln täglich Daten – doch nur wenige nutzen sie gezielt. Wie lassen sich
     Daten strategisch für Entscheidungen nutzen? Was bedeuten Datenethik und Datenschutz konkret im
@@ -64,7 +64,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   </p>
   <Fragment slot="cta">
     <LabLinkButton href="#start">Kursüberblick</LabLinkButton>
-    <LabLinkButton href="/kurse/kurs2">zu Kurs 2</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs2">Kurs: Daten nutzen</LabLinkButton>
   </Fragment>
 
   <ColumnsSection center_title>
@@ -77,7 +77,7 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
       </Blockquote>
     </Fragment>
     <div class="flex rows gap-2" slot="col1">
-      <h4>Der Kurs ist für dich richtig, wenn…</h4>
+      <h4>Der Kurs ist für dich, wenn…</h4>
       <Fragment set:html={await KursColumns1.compiledContent()} />
     </div>
 
@@ -91,24 +91,24 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
     options={{ content_grid: true, full_height: true, center: true }}
     asset={{ src: CarouselBackground.src, position: 'bottom right' }}
   >
-    <Carousel slides={quotes.landing.filter((quote) => quote.k === 1)} id="carousel">
-      {
-        quotes.landing
-          .filter((quote) => quote.k === 1)
-          .map((quote, index) => (
-            <div class="carousel-content" data-step-id={index + 1}>
-              <Blockquote id={index + 1}>
-                <Fragment>{quote.quote}</Fragment>
-                <Fragment slot="cite">
-                  {' '}
-                  <span class="name txt-italic">{quote.cite.name}</span>
-                  <span class="role">{quote.cite.role}</span>
-                </Fragment>
-              </Blockquote>
-            </div>
-          ))
-      }
-    </Carousel>
+    <!-- <Carousel slides={quotes.landing.filter((quote) => quote.k === 1)} id="carousel"> -->
+    {
+      quotes.landing
+        .filter((quote) => quote.k === 1)
+        .map((quote, index) => (
+          // <div class="carousel-content" data-step-id={index + 1}>
+          <Blockquote id={index + 1}>
+            <Fragment>{quote.quote}</Fragment>
+            <Fragment slot="cite">
+              {' '}
+              <span class="name txt-italic">{quote.cite.name}</span>
+              <span class="role">{quote.cite.role}</span>
+            </Fragment>
+          </Blockquote>
+          // </div>
+        ))
+    }
+    <!-- </Carousel> -->
   </BackgroundSection>
 
   <section class="prose">
@@ -119,27 +119,38 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   </section>
 
   <section class="pt-0">
-    <figure>
-      <Image src={FlyerKurs} alt="Flyer Kurs 1" />
-      <figcaption class="contained">TODO: Flyer</figcaption>
+    <figure aria-describedby="kurs-timeline">
+      <a href="/assets/CorrelLAB_Daten_verstehen_Onepager.pdf" target="_blank" download>
+        <Image src={FlyerKurs} alt="Flyer Kurs: Daten verstehen" /></a
+      >
+      <figcaption class="contained">
+        <div>
+          <a href="/assets/CorrelLAB_Daten_verstehen_Onepager.pdf" target="_blank" download
+            >Link zum One-Pager (PDF)</a
+          >
+        </div>
+        <details>
+          <summary>Die Themen in Tabellenform</summary>
+          <div class="subsection prose cap pt-4" style="color: var(--color-gray-800)">
+            <CardPlain>
+              <h4 slot="card-title">Die Themen</h4>
+              <table slot="content" id="kurs-timeline">
+                <tbody>
+                  {
+                    kurs1.map((item) => (
+                      <tr>
+                        <td>{item.date}</td>
+                        <td>{item.topic}</td>
+                      </tr>
+                    ))
+                  }
+                </tbody>
+              </table>
+            </CardPlain>
+          </div>
+        </details>
+      </figcaption>
     </figure>
-    <div class="subsection prose pad-6">
-      <CardPlain>
-        <h4 slot="card-title">Die Themen</h4>
-        <table slot="content">
-          <tbody>
-            {
-              kurs1.map((item) => (
-                <tr>
-                  <td>{item.date}</td>
-                  <td>{item.topic}</td>
-                </tr>
-              ))
-            }
-          </tbody>
-        </table>
-      </CardPlain>
-    </div>
     <div class="subsection content-box narrow flex rows align-center">
       <Fragment set:html={await KostenContent.compiledContent()} />
     </div>
@@ -154,7 +165,8 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
   <PeopleSection people={people} />
 
   <Banner slot="banner">
-    <Fragment slot="title">Interessiert?</Fragment>
+    {
+      /* <Fragment slot="title">Interessiert?</Fragment>
     <Fragment slot="body">
       <p class="light">
         Wir sind immer auf der Suche nach ehrenamtlichen Tutor*innen für unseren nächsten Kurs!
@@ -166,12 +178,13 @@ import * as KursSchedule from '@content/kurse/kurs_1_schedule.md';
       href="mailto:education@correlaid.org"
       classes="btn-icon"
       slot="cta"><MailIcon height={'20'} /> Nachricht schreiben</LinkButton
-    >
+    >*/
+    }
   </Banner>
 
   <div class="flex cols center gap-2 pad-8" slot="footer-links">
-    <LabLinkButton href="/kurse/kurs2">zu Kurs 2</LabLinkButton>
-    <LabLinkButton href="/praxisphase">Praxisphase</LabLinkButton>
+    <LabLinkButton href="/kurse/kurs2">Kurs: Daten nutzen</LabLinkButton>
+    <LabLinkButton href="/praxisphase">Zur Praxisphase</LabLinkButton>
   </div>
 </KursLayout>
 
