--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -51,6 +51,22 @@
   padding-top: 0 !important;
 }
 
+.pt-1 {
+  padding-top: var(--space-1) !important;
+}
+
+.pt-2 {
+  padding-top: var(--space-2) !important;
+}
+
+.pt-3 {
+  padding-top: var(--space-3) !important;
+}
+
+.pt-4 {
+  padding-top: var(--space-4) !important;
+}
+
 .pad-0 {
   padding: 0;
 }
@@ -155,4 +171,16 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
 }
