--- a/src/pages/kurse/kurs2.astro
+++ b/src/pages/kurse/kurs2.astro
@@ -55,7 +55,7 @@ import * as KursColumns2 from '@content/kurse/kurs_2_columns_2.md';
 import * as KursSchedule from '@content/kurse/kurs_2_schedule.md';
 ---
 
-<KursLayout title="CorrelLAB: Kurs 2 - Daten nutzen">
+<KursLayout title="CorrelLAB: Kurs - Daten nutzen">
   <h4 slot="subtitle">
     Kurs: Daten nutzen<br />&ndash;&nbsp;Tools und Methoden praktisch anwenden
   </h4>
